# tara

./: .env.example  .gitignore  README.md  create_mock_data.py  pyproject.toml
backend/: astrology_engine.py  chart_context.py  feature_extractor.py  llm_agent.py  main.py  memory.py  prompts.py  retrieval.py  schemas.py  session_manager.py  tools.py
data/: career_guidance.txt  house_meanings.json  love_guidance.txt  nakshatra_mapping.json  planet_meanings.json  planetary_impacts.json  spiritual_guidance.txt  zodiac_sign_meanings.json  zodiac_traits.json
frontend/: index.html
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: BirthDetailsForm.jsx  ChartLoader.jsx  ChatContainer.jsx  DatePicker.jsx  LocationSearch.jsx  MessageInput.jsx  MessageList.jsx  NatalChart.jsx  TimePicker.jsx
