[project]
name = "mynaksh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.2",
    "fastapi>=0.135.1",
    "geopy>=2.4.1",
    "kerykeion>=5.10.1",
    "loguru>=0.7.3",
    "openai>=2.24.0",
    "openai-agents>=0.10.4",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "timezonefinder>=8.2.1",
    "uvicorn>=0.41.0",
]
